[package]
name = "rp235x_async"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
cortex-m-rt = "0.7.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-embedded-hal = "0.5.0"
embassy-executor = { version = "0.9.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-rp = { version = "0.9.0", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp235xa", "binary-info"] }
embassy-sync = "0.7.2"
embassy-time = { version = "0.5.0", features = ["defmt", "defmt-timestamp-uptime"] }
honeywell_mpr = { path = "../../../" }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[[bin]]
name = "i2c_status"
path = "src/bin/i2c_status.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "i2c_raw_data"
path = "src/bin/i2c_raw_data.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "i2c_raw_data_with_delay"
path = "src/bin/i2c_raw_data_with_delay.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "i2c_read"
path = "src/bin/i2c_read.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "i2c_read_with_delay"
path = "src/bin/i2c_read_with_delay.rs"
test = false
doctest = false
bench = false