[package]
name = "rp235x_blocking"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal = "1.0.0"
honeywell_mpr = { path = "../../../", features = ["sync"] }
panic-halt = "1.0.0"
rp235x-hal = { version = "0.3.0", features = ["rt", "critical-section-impl", "defmt"] }

[profile.release]
# Enable generation of debug symbols even on release builds
debug = true

[[bin]]
name = "i2c_status"
path = "src/bin/i2c_status.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "i2c_raw_data"
path = "src/bin/i2c_raw_data.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "i2c_raw_data_with_delay"
path = "src/bin/i2c_raw_data_with_delay.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "i2c_read"
path = "src/bin/i2c_read.rs"
test = false
doctest = false
bench = false

[[bin]]
name = "i2c_read_with_delay"
path = "src/bin/i2c_read_with_delay.rs"
test = false
doctest = false
bench = false